# Sanitizer-Robot-Project

./: README.md  turtlebot3_map_creation  turtlebot3_project
Jupyter_Notebooks/: map_opencv.ipynb  new_goals.ipynb
Jupyter_Notebooks/.ipynb_checkpoints/: map_project_house_opencv-checkpoint.ipynb
simple_navigation_goals/: CMakeLists.txt  package.xml
simple_navigation_goals/src/: example_move_base_client.cpp  simple_navigation_goals.cpp
turtlebot3_big_house/: CMakeLists.txt
turtlebot3_big_house/turtlebot3_big_house/: package.xml
turtlebot3_project_house/: CMakeLists.txt  package.xml
turtlebot3_project_house/launch/: turtlebot3_project_house.launch
turtlebot3_project_house/model/: model.config  model.sdf
turtlebot3_project_house/worlds/: turtlebot3_project_house.world
turtlebot3_project_localization/: CMakeLists.txt  package.xml
turtlebot3_project_localization/src/: turtlebot3_project_localization.cpp
turtlebot3_project_navigation/: CMakeLists.txt  package.xml
turtlebot3_project_navigation/msg/: Array.msg
turtlebot3_project_navigation/scripts/: goals.txt  python_prova.py  turtlebot3_project_energy_cv.py  turtlebot3_project_navigation_energy.py  turtlebot3_project_navigation_textfile.py
turtlebot3_project_navigation/src/: navigation_goals_from_user_2.cpp  turtlebot3_project_navigation.cpp  turtlebot3_project_navigationBACKUP.cpp  turtlebot3_project_pose.cpp
